[project]
name = "comfyqr"
description = "QR generation within ComfyUI. Contains nodes suitable for workflows from generating basic QR images to techniques with advanced QR masking."
version = "1.0.0"
license = "LICENSE"
dependencies = ["qrcode >= 7.1"]

[project.urls]
Repository = "https://github.com/coreyryanhanson/ComfyQR"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyQR"
Icon = ""
